--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: book_store
+name: e_book
 
-description: "A Somali Book Store application with features like cart, wishlist, and categories."
+description: A digital library application
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0
   provider: ^6.1.1
+  google_fonts: ^6.1.0
   shimmer: ^2.0.0
   fluttertoast: ^8.2.4
 
@@ -19,10 +19,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.9
 
 flutter:
   uses-material-design: true
   assets:
+    - assets/icons/
+    - assets/icons/app_icon.png
     - assets/books/
     - assets/books/images/
     - assets/books/pdfs/
@@ -31,3 +35,33 @@ flutter:
     - assets/books/catalog/fiction.json
     - assets/books/catalog/search_index.json
     - assets/books/prices.json
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/app_icon.png"
+  adaptive_icon_background: "#0099FF"
+  adaptive_icon_foreground: "assets/icons/app_icon.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/icons/app_icon.png"
+    background_color: "#0099FF"
+    theme_color: "#0099FF"
+
+flutter_native_splash:
+  color: "#0099FF"
+  image: assets/icons/app_icon.png
+  branding: assets/icons/app_icon.png
+  color_dark: "#0099FF"
+  image_dark: assets/icons/app_icon.png
+  branding_dark: assets/icons/app_icon.png
+
+  android_12:
+    image: assets/icons/app_icon.png
+    icon_background_color: "#0099FF"
+    image_dark: assets/icons/app_icon.png
+    icon_background_color_dark: "#0099FF"
+
+  web: false
