--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   shimmer: ^3.0.0
   fluttertoast: ^8.2.4
   card_swiper: ^3.0.1
+  syncfusion_flutter_pdfviewer: ^24.1.41
+  path_provider: ^2.1.1
+  device_info_plus: ^9.1.1
 
 dev_dependencies:
   flutter_test:
