--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,19 +5,22 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.1
   google_fonts: ^6.1.0
+  flutter_animate: ^4.3.0
   shimmer: ^3.0.0
   fluttertoast: ^8.2.4
   card_swiper: ^3.0.1
   syncfusion_flutter_pdfviewer: ^24.1.41
   path_provider: ^2.1.1
   device_info_plus: ^9.1.1
+  smooth_page_indicator: ^1.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +32,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/icons/
+    - assets/images/
+    - assets/images/onboarding/
+    - assets/images/payment/
     - assets/books/
     - assets/books/images/
     - assets/books/pdfs/
