--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http: ^1.1.0
   flutter_secure_storage: ^9.0.0
   app_links: ^3.4.5
+  connectivity_plus: ^6.1.1
 
 dev_dependencies:
   flutter_test:
