--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   app_links: ^3.4.5
   connectivity_plus: ^6.1.1
+  network_info_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
